--- a/index.html
+++ b/index.html
@@ -9,36 +9,8 @@
 <body>
   <center>
     <h1>Ojal S Kumar</h1>
-    Student,HansRaj College
-    <p>B.Sc(H) Mathematics</p>
+    <a href="C:\Users\ITsME\Documents\Web Development\HTML-Personal Site\contact.html">Contact Details</a>
+    <br>
+    <a href="C:\Users\ITsME\Documents\Web Development\HTML-Personal Site\edu.html">Educational Qualifications</a>
   </center>
   <hr size="3db">
-  <p>
-    My Bonnie lies over the ocean.
-
-    My Bonnie lies over the sea.
-
-    My Bonnie lies over the ocean.
-
-    Oh,bring back my Bonnie to me.
-  </p>
-
-  <pre>
-    My Bonnie lies over the ocean.
-
-    My Bonnie lies over the sea.
-
-    My Bonnie lies over the ocean.
-
-    Oh,bring back my Bonnie to me.
-  </pre>
-  <hr size="3db">
-  <a href="https//:www.google.com">Search Google</a>
-  <b>This text is bold</b>
-
-  <img src="background.jpg" alt=" Ojal Hansraj College">
-  <!if someone searched Ojal Hansraj College this site may come up>
-    <img src="background.jpg" alt=" W3Schools.com" width="104" height="142">
-</body>
-
-</html>
