--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Contact Details</title>
   </head>
-  <body style="background-color:powderblue">
-    <p style="backgrounf_color:tomato">This is the GE CN Lab.<br>This is the first lab.</p>
-
-    <i>computer networks</i> <!italics>
-    <em>computer networks</em>
-    <b>General Elective</b> <!bold>
-    <strong>General Elective</strong>
+  <body>
+    <p>Email: ojal0708@gmail.com</p>
+    <br>
+    <p>Contact number: 7983720452</p>
   </body>
 </html>
