--- a/edu.html
+++ b/edu.html
@@ -5,7 +5,12 @@
     <title>Educational Qualifications</title>
   </head>
   <body>
-    <p>ICSE Board Marks: 93% <br> ISC Board Marks: 97.5%</p>
-    <p>Presently a B.Sc(H) Mathematics Student at HansRaj College.</p>
+    <h2>ICSE</h2>
+    <p>Passed in 2018 <br>ICSE Board Marks: 93%</p>
+
+    <h2>ISC</h2>
+    <p>Passed in 2020 <br>ISC Board Marks: 97.5%</p>
+    <h2>Present</h2>
+    <p>B.Sc(H) Mathematics Student at HansRaj College.</p>
   </body>
 </html>
