--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <center>
     <h1>Ojal S Kumar</h1>
-    <a href="C:\Users\ITsME\Documents\Web Development\HTML-Personal Site\contact.html">Contact Details</a>
+    <a href="contact.html">Contact Details</a>
     <br>
-    <a href="C:\Users\ITsME\Documents\Web Development\HTML-Personal Site\edu.html">Educational Qualifications</a>
+    <a href="edu.html">Educational Qualifications</a>
   </center>
   <hr size="3db">
