--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <center>
     <h1>Ojal S Kumar</h1>
-    <a href="contact.html">Contact Details</a>
+    <a href="https://github.com/OJS0708/CV/blob/a50bace662fd9ac9c6688c2e685fa9dae7f7d56c/contact.html">Contact Details</a>
     <br>
-    <a href="edu.html">Educational Qualifications</a>
+    <a href="https://github.com/OJS0708/CV/blob/48ea54809210fa2c6c0df712cbb68d2baf683bf4/edu.html">Educational Qualifications</a>
   </center>
   <hr size="3db">
