--- a/edu.html
+++ b/edu.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Educational Qualifications</title>
   </head>
-  <body>
+  <body style="background-color:lightblue">
     <h2>ICSE</h2>
     <p>Passed in 2018 <br>ICSE Board Marks: 93%</p>
 
