--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <title>Ojal's Website</title>
 </head>
 
-<body>
+<body style="background-color:oceanblue">
   <center>
     <h1>Ojal S Kumar</h1>
+    
     <a href="contact.html">Contact Details</a>
+    <br>
     <a href="edu.html">Educational Qualifications</a>
   </center>
   <hr size="3db">
