--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <title>Ojal's Website</title>
 </head>
 
-<body style="background-color:oceanblue">
+<body>
   <center>
     <h1>Ojal S Kumar</h1>
-    
-    <a href="contact.html">Contact Details</a>
-    <br>
-    <a href="edu.html">Educational Qualifications</a>
   </center>
   <hr size="3db">
+  <h2>Contact Details</h2>
+  <a href="C:\Users\ITsME\Documents\Web Development\HTML-Personal Site\contact.html">Click here to see the Details</a>
+  <h2>Educational Qualifications</h2>
+  <a href="C:\Users\ITsME\Documents\Web Development\HTML-Personal Site\edu.html">Click here to see the Qualifications</a>
+
+</body>
