--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <title>Contact Details</title>
   </head>
   <body style="background-color:lightblue">
+    <center> <h1>Contact Details</h1></center>
     <p>Email: ojal0708@gmail.com</p>
     <p>Contact number: 7983720452</p>
   </body>
