--- a/edu.html
+++ b/edu.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Educational Qualifications</title>
+    <title></title>
   </head>
   <body style="background-color:lightblue">
+    <center> <h1>Educational Qualifications</h1></center>
     <h2>ICSE</h2>
     <p>Passed in 2018 <br>ICSE Board Marks: 93%</p>
 
