--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <center>
     <h1>Ojal S Kumar</h1>
+    <img src="me.jfif" alt="Ojal" width="104" height="142">
   </center>
   <hr size="3db">
   <h2>Contact Details</h2>
