--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Ojal's Website</title>
 </head>
 
-<body>
+<body style="background-color:lightblue">
   <center>
     <h1>Ojal S Kumar</h1>
     <img src="me.jfif" alt="Ojal" width="104" height="142">
