--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </center>
   <hr size="3db">
   <h2>Contact Details</h2>
-  <a href="C:\Users\ITsME\Documents\Web Development\HTML-Personal Site\contact.html">Click here to see the Details</a>
+  <a href="contact.html">Click here to see the Details</a>
   <h2>Educational Qualifications</h2>
-  <a href="C:\Users\ITsME\Documents\Web Development\HTML-Personal Site\edu.html">Click here to see the Qualifications</a>
+  <a href="edu.html">Click here to see the Qualifications</a>
 
 </body>
