--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@
   <hr size="3db">
   <h2>Educational Qualifications</h2>
   <a href="edu.html">Click here to see the Qualifications</a>
-
+  <hr size="3db">
 </body>
