--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
   <title>Ojal's Website</title>
 </head>
 
-<body style="background-color:lightblue">
+<body style="background-color:mediumaquamarine">
   <center>
-    <h1>Ojal S Kumar</h1>
+    <h1>My Resume</h1>
     <img src="me.jfif" alt="Ojal" width="104" height="142">
+    <p>Name: Ojal S Kumar <br>
+      Student, B.Sc(H) Mathematics <br>
+      HansRaj College
+    </p>
   </center>
-  
+
   <h2>Contact Details</h2>
   <a href="contact.html">Click here to see the Details</a>
   <hr size="3db">
