--- a/edu.html
+++ b/edu.html
@@ -4,14 +4,34 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body style="background-color:lightblue">
-    <center> <h1>Educational Qualifications</h1></center>
-    <h2>ICSE</h2>
-    <p>Passed in 2018 <br>ICSE Board Marks: 93%</p>
-
-    <h2>ISC</h2>
-    <p>Passed in 2020 <br>ISC Board Marks: 97.5%</p>
-    <h2>Present</h2>
-    <p>B.Sc(H) Mathematics Student at HansRaj College.</p>
+  <body style="background-color:mediumaquamarine">
+    <center> <h1>Educational Qualifications</h1>
+    <table border="2">
+    <tr>
+      <th>      </th>
+      <th>ICSE</th>
+      <th>ISC</th>
+      <th>Undergraduation</th>
+    </tr>
+    <tr>
+      <td>Status</td>
+      <td>Passed in 2018</td>
+      <td>Passed in 2020</td>
+      <td>Pursuing</td>
+    </tr>
+    <tr>
+      <td>Institute</td>
+      <td>St. Jude's School</td>
+      <td>The Shriram Millennium School</td>
+      <td>HansRaj College</td>
+    </tr>
+    <tr>
+      <td>Percentage</td>
+      <td>93%</td>
+      <td>97.5%</td>
+      <td>-</td>
+    </tr>
+  </table>
+    </center>
   </body>
 </html>
