--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Contact Details</title>
   </head>
-  <body style="background-color:lightblue">
+  <body style="background-color:mediumaquamarine">
     <center> <h1>Contact Details</h1></center>
     <p>Email: ojal0708@gmail.com</p>
     <p>Contact number: 7983720452</p>
