--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
   </center>
 
   <h2>Contact Details</h2>
-  <a href="contact.html">Click here to see the Details</a>
+  <a href="contact.html">Click here to see my Details</a>
   <hr size="3db">
   <h2>Educational Qualifications</h2>
-  <a href="edu.html">Click here to see the Qualifications</a>
+  <a href="edu.html">Click here to see my Qualifications</a>
+  <hr size="3db">
+  <h2>Hobbies</h2>
+  <a href="hobbies.html">Click here to see some of my Hobbies</a>
   <hr size="3db">
 </body>
+</html>
