--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Hobbies</title>
   </head>
-  <body>
+  <body style="background-color:mediumaquamarine">
     <center>
       <h1>Hobbies</h1>
     </center>
