--- a/index.html
+++ b/index.html
@@ -3,27 +3,31 @@
 
 <head>
   <meta charset="utf-8">
+  <!--Practical 1: title-->
   <title>Ojal's Website</title>
 </head>
 
-<body style="background-color:mediumaquamarine">
+<body style="background-color:mediumaquamarine"><!--Practical 1: backgroundcolor-->
   <center>
-    <h1>My Resume</h1>
+    <!--Practical 1: underline,heading-->
+    <u><h1>My Resume</h1></u>
+    <!--Practical 2: Inserting image-->
     <img src="me.jfif" alt="Ojal" width="104" height="142">
-    <p>Name: Ojal S Kumar <br>
-      Student, B.Sc(H) Mathematics <br>
-      HansRaj College
+    <!--Practical 1: bold,line break,paragraph-->
+        <p><b>Name:</b> Ojal S Kumar <br>
+      <b>Occupation:</b> Student<br>
+       B.Sc(H) Mathematics, HansRaj College
     </p>
   </center>
-
-  <h2>Contact Details</h2>
-  <a href="contact.html">Click here to see my Details</a>
+  <!--Practical 1: heading,horizontal lines,italics,text color
+    Practical 2: external linking-->
+  <h3 style="color:blue">Contact Details</h3>
+  <a href="contact.html"><em>Click here to see my Details</em></a>
   <hr size="3db">
-  <h2>Educational Qualifications</h2>
-  <a href="edu.html">Click here to see my Qualifications</a>
+  <h3 style="color:blue">Educational Qualifications</h3>
+  <a href="edu.html"><em>Click here to see my Qualifications</em></a>
   <hr size="3db">
-  <h2>Hobbies</h2>
-  <a href="hobbies.html">Click here to see some of my Hobbies</a>
+  <h3 style="color:blue">Hobbies</h3>
+  <a href="hobbies.html"><em>Click here to see some of my Hobbies</em></a>
   <hr size="3db">
 </body>
-</html>
