--- a/hobbies.html
+++ b/hobbies.html
@@ -8,6 +8,7 @@
     <center>
       <h1>Hobbies</h1>
     </center>
+    <!--Practical 2: unordered list -->
     <ul>
       <li>Reading Novels</li>
       <li>Digital Art</li>
