--- a/edu.html
+++ b/edu.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body style="background-color:mediumaquamarine">
-    <center> <h1>Educational Qualifications</h1>
+
+<head>
+  <meta charset="utf-8">
+  <title>Educational Qualifications</title>
+</head>
+
+<body style="background-color:mediumaquamarine">
+  <!--Practical 5: Roll No, student’s name and Grades in a tabular form-->
+  <center>
+    <h1>Educational Qualifications</h1>
     <table border="2">
-    <tr>
-      <th>      </th>
-      <th>ICSE</th>
-      <th>ISC</th>
-      <th>Undergraduation</th>
-    </tr>
-    <tr>
-      <td>Status</td>
-      <td>Passed in 2018</td>
-      <td>Passed in 2020</td>
-      <td>Pursuing</td>
-    </tr>
-    <tr>
-      <td>Institute</td>
-      <td>St. Jude's School</td>
-      <td>The Shriram Millennium School</td>
-      <td>HansRaj College</td>
-    </tr>
-    <tr>
-      <td>Percentage</td>
-      <td>93%</td>
-      <td>97.5%</td>
-      <td>-</td>
-    </tr>
-  </table>
-    </center>
-  </body>
+      <tr>
+        <th>Roll no: 13937</th>
+        <th>ICSE</th>
+        <th>ISC</th>
+        <th>Undergraduation</th>
+      </tr>
+      <tr>
+        <td><b>Status</b></td>
+        <td>Passed in 2018</td>
+        <td>Passed in 2020</td>
+        <td>Pursuing</td>
+      </tr>
+      <tr>
+        <td><b>Institute</b></td>
+        <td>St. Jude's School</td>
+        <td>The Shriram Millennium School</td>
+        <td>HansRaj College</td>
+      </tr>
+      <tr>
+        <td><b>Percentage</b></td>
+        <td>93%</td>
+        <td>97.5%</td>
+        <td>-</td>
+      </tr>
+    </table>
+  </center>
+</body>
+
 </html>
