--- a/edu.html
+++ b/edu.html
@@ -9,7 +9,7 @@
 <body style="background-color:mediumaquamarine">
   <center>
     <h1>Educational Qualifications</h1>
-    <table border="2">
+    <table border="2" style="background-color:white">
       <tr>
         <th>Roll no: 13937</th>
         <th>ICSE</th>
