--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
   <title>Ojal's Website</title>
 </head>
 
-<body style="background-color:mediumaquamarine"><!--Practical 1: backgroundcolor-->
+<body style="background-color:mediumaquamarine">
+  <!--Practical 1: backgroundcolor-->
   <center>
     <!--Practical 1: underline,heading-->
-    <u><h1>My Resume</h1></u>
+    <u>
+      <h1>My Resume</h1>
+    </u>
     <!--Practical 2: Inserting image-->
-    <img src="me.jfif" alt="Ojal" width="104" height="142">
+    <img src="me.jpg" alt="Image" width="104" height="142">
     <!--Practical 1: bold,line break,paragraph-->
-        <p><b>Name:</b> Ojal S Kumar <br>
+    <p><b>Name:</b> Ojal S Kumar <br>
       <b>Occupation:</b> Student<br>
-       B.Sc(H) Mathematics, HansRaj College
+      HansRaj College
     </p>
   </center>
   <!--Practical 1: heading,horizontal lines,italics,text color
@@ -31,3 +34,5 @@
   <a href="hobbies.html"><em>Click here to see some of my Hobbies</em></a>
   <hr size="3db">
 </body>
+
+</html>
