--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
   </head>
   <body style="background-color:mediumaquamarine">
     <center> <h1>Contact Details</h1></center>
-    <p>Email: ojal0708@gmail.com</p>
-    <p>Contact number: 7983720452</p>
+      <p><b>Email:</b> email1234@gmail.com</p>
+      <p><b>Contact number:</b> 1234567890</p>
+      <p><b>Address:</b> Noida, Uttar Pradesh</p>
   </body>
 </html>
