--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>My Resume</h1>
     </u>
     <!--Practical 2: Inserting image-->
-    <img src="me.jpg" alt="Image" width="104" height="142">
+    <img src="me.jpg" alt="Image" >
     <!--Practical 1: bold,line break,paragraph-->
     <p><b>Name:</b> Ojal S Kumar <br>
       <b>Occupation:</b> Student<br>
