--- a/index.html
+++ b/index.html
@@ -5,34 +5,38 @@
   <meta charset="utf-8">
   <!--Practical 1: title-->
   <title>Ojal's Website</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 
-<body style="background-color:mediumaquamarine">
+<body>
   <!--Practical 1: backgroundcolor-->
-  <center>
     <!--Practical 1: underline,heading-->
-    <u>
       <h1>My Resume</h1>
-    </u>
     <!--Practical 2: Inserting image-->
-    <img src="me.jpg" alt="Image" >
+    <center>
+    <img height=160 width=150 src="image.jpg" alt="Image" >
+    <!-- width=104 height=142 -->
     <!--Practical 1: bold,line break,paragraph-->
-    <p><b>Name:</b> Ojal S Kumar <br>
+    <p>
+      <b>Name:</b> Ojal S Kumar <br>
       <b>Occupation:</b> Student<br>
-      HansRaj College
     </p>
   </center>
   <!--Practical 1: heading,horizontal lines,italics,text color
     Practical 2: external linking-->
-  <h3 style="color:blue">Contact Details</h3>
-  <a href="contact.html"><em>Click here to see my Details</em></a>
-  <hr size="3db">
-  <h3 style="color:blue">Educational Qualifications</h3>
-  <a href="edu.html"><em>Click here to see my Qualifications</em></a>
-  <hr size="3db">
-  <h3 style="color:blue">Hobbies</h3>
-  <a href="hobbies.html"><em>Click here to see some of my Hobbies</em></a>
-  <hr size="3db">
+    <br>
+  <h2>Contact Details</h3>
+  <a href="contact.html">Click here to see my Details</a>
+  <br>
+  <hr>
+  <h2>Educational Qualifications</h3>
+  <a href="edu.html">Click here to see my Qualifications</a>
+  <br>
+  <hr>
+  <h2>Hobbies</h3>
+  <a href="hobbies.html">Click here to see some of my Hobbies</a>
+  <br>
+  <hr>
 </body>
 
 </html>
