--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Details</title>
+    <link rel="stylesheet" href="index.css">
   </head>
-  <body style="background-color:mediumaquamarine">
-    <center> <h1>Contact Details</h1></center>
+  <body>
+    <center><h1>Contact Details</h1></center>
       <p><b>Email:</b> email1234@gmail.com</p>
       <p><b>Contact number:</b> 1234567890</p>
       <p><b>Address:</b> Noida, Uttar Pradesh</p>
