--- a/edu.html
+++ b/edu.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <title>Educational Qualifications</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 
-<body style="background-color:mediumaquamarine">
+<body>
+  <h1>Educational Qualifications</h1>
   <center>
-    <h1>Educational Qualifications</h1>
-    <table border="2" style="background-color:white">
-      <tr>
-        <th>Roll no: 13937</th>
+    <table border="2">
+      <tr class="thead">
+        <th> </th>
         <th>ICSE</th>
         <th>ISC</th>
         <th>Undergraduation</th>
       </tr>
       <tr>
-        <td><b>Status</b></td>
+        <th class="thead">Status</th>
         <td>Passed in 2018</td>
         <td>Passed in 2020</td>
         <td>Pursuing</td>
       </tr>
       <tr>
-        <td><b>Institute</b></td>
+        <th class="thead">Institute</th>
         <td>St. Jude's School</td>
         <td>The Shriram Millennium School</td>
         <td>HansRaj College</td>
       </tr>
       <tr>
-        <td><b>Percentage</b></td>
+        <th class="thead">Percentage</th>
         <td>93%</td>
         <td>97.5%</td>
         <td>-</td>
