--- a/hobbies.html
+++ b/hobbies.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Hobbies</title>
+    <link rel="stylesheet" href="index.css">
   </head>
-  <body style="background-color:mediumaquamarine">
+  <body>
     <center>
       <h1>Hobbies</h1>
     </center>
@@ -12,7 +13,7 @@
     <ul>
       <li>Reading Novels</li>
       <li>Digital Art</li>
-      <li></li>
+      <li>Listening to Music</li>
     </ul>
   </body>
 </html>
